force-app/main/default/objects/Lead/fields/AccessTokenExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenExpiresAt__c</fullName>
    <description>고객용 추천 링크의 만료 시각. 토큰 발급 시점을 기준으로 7일 뒤로 설정한다.</description>
    <label>웹 접근 토큰 만료 시각</label>
    <type>DateTime</type>
</CustomField>