force-app/main/default/objects/Lead/fields/BudgetPerPerson__c.field-meta.xml
<CustomField>
    <fullName>BudgetPerPerson__c</fullName>
    <description>1인당 예산(원). 예산 적합도(BudgetFitScore) 계산의 기준값</description>
    <label>1인당 예산</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>