force-app/main/default/objects/Lead/fields/ConsultationNotes__c.field-meta.xml
<CustomField>
    <fullName>ConsultationNotes__c</fullName>
    <description>상담사가 통화/이메일로 확인한 내용을 자유 텍스트로 기록. Screen Flow에서 이 메모를 Parse_Consultation_Notes_Flow에 전달해 중요도 3개를 자동 제안받는다.</description>
    <label>상담 메모</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>