force-app/main/default/objects/Lead/fields/FoodPriority__c.field-meta.xml
<CustomField>
    <fullName>FoodPriority__c</fullName>
    <description>1~5. Web-to-Lead HTML의 select 옵션 텍스트(예: &quot;하객 만족의 핵심이에요&quot;)는 자연어이고 실제 저장값은 숫자 — Flow 가중치 계산(/5)에 그대로 사용</description>
    <label>음식 중요도</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>