force-app/main/default/objects/Lead/fields/GuestCount__c.field-meta.xml
<CustomField>
    <fullName>GuestCount__c</fullName>
    <description>예상 하객 수. Web-to-Lead로 1차 수집, 상담사가 Screen Flow에서 재확인</description>
    <label>하객 수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>