force-app/main/default/objects/Lead/fields/ParkingPriority__c.field-meta.xml
<CustomField>
    <fullName>ParkingPriority__c</fullName>
    <description>1~5. 자연어 라벨은 Web-to-Lead HTML select에서, 저장값은 숫자</description>
    <label>주차 중요도</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>