force-app/main/default/objects/Lead/fields/PreferredDistrict__c.field-meta.xml
<CustomField>
    <fullName>PreferredDistrict__c</fullName>
    <description>선호 자치구(선택). 예: 마포구</description>
    <label>희망 지역</label>
    <length>40</length>
    <type>Text</type>
</CustomField>