force-app/main/default/objects/Lead/fields/PreferredVenueType__c.field-meta.xml
<CustomField>
    <fullName>PreferredVenueType__c</fullName>
    <description>웹폼/상담 화면에서 고객이 선택한 선호 장소 유형(VenueType__c.Name과 매칭). 추천 Flow가 이 값으로 후보 장소를 필터링한다. &quot;상관없음&quot;이면 필터링 없이 전체 후보를 스코어링한다.</description>
    <label>선호 장소 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>상관없음</fullName>
                <default>true</default>
                <label>상관없음</label>
            </value>
            <value>
                <fullName>웨딩홀</fullName>
            </value>
            <value>
                <fullName>레스토랑</fullName>
            </value>
            <value>
                <fullName>카페</fullName>
            </value>
            <value>
                <fullName>야외</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>