force-app/main/default/objects/Lead/fields/SelectedPackage__c.field-meta.xml
<CustomField>
    <fullName>SelectedPackage__c</fullName>
    <description>홈페이지 패키지 소개 페이지에서 신부가 선택한 패키지 등급. Web-to-Lead hidden field로 전달되며, Convert 시 Opportunity Record Type을 자동 결정하는 기준이 된다.</description>
    <label>선택 패키지</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>베이직</fullName>
            </value>
            <value>
                <fullName>스탠다드</fullName>
                <default>true</default>
                <label>스탠다드</label>
            </value>
            <value>
                <fullName>프리미엄</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>