force-app/main/default/objects/Lead/fields/WeddingDate__c.field-meta.xml
<CustomField>
    <fullName>WeddingDate__c</fullName>
    <description>선택 입력. Convert 시 Opportunity.CloseDate로 연결 가능</description>
    <label>예상 예식일</label>
    <type>Date</type>
</CustomField>